testdata/baselines/reference/submodule/compiler/jsExportMemberMergedWithModuleAugmentation3.errors.txt
/x.js(2,1): error TS2309: An export assignment cannot be used in a module with other exported elements.
/x.js(2,18): error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== /x.js (2 errors) ====
    module.exports.x = 1;
    module.exports = require("./y.js");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
                     ~~~~~~~
!!! error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    
==== /y.d.ts (0 errors) ====
    export declare type x = 1;
    